--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ sysinfo.txt
 
 # Documentation
 /doc/
+
+#ProjectSettings
+ProjectSettings/ProjectSettings.asset
+ProjectSettings/ProjectVersion.txt
+
